# django-json-agg

./: .cookiecutter.json  .cruft.json  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  noxfile.py  pyproject.toml
.github/: dependabot.yml
.github/workflows/: labeler.yml  release.yml  tests.yml
docs/: conf.py  index.md  reference.md  requirements.txt  usage.md
src/json_agg/: __init__.py  __main__.py  aggregates.py
tests/: __init__.py  conftest.py  models.py  post_factory.py  test_array_agg.py  test_main.py  test_obj_agg.py  test_post_factory.py
